# claude-code-zed

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  REVERSE.md  TODO.md  extension.toml  test.rs
.githooks/: commit-msg
.github/: label-commits.md  release.yml
.github/workflows/: release.yml
claude-code-extension/: Cargo.toml  extension.toml
claude-code-extension/src/: lib.rs
claude-code-server/: Cargo.toml
claude-code-server/src/: lsp.rs  main.rs  mcp.rs  tools.rs  websocket.rs
src/: lib.rs
