[package]
name = "claude-code-zed"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.27"
tungstenite = "0.27"
futures-util = "0.3"
dirs = "5.0"
http = "0.2"